<resources>
    <string name="app_name">Raffle App</string>
    <string name="BtnCash">Pay with cash</string>
    <string name="BtnSquare">Send to Square</string>
    <string name="BtnUndosale">Undo last sale</string>
    <string name="TitleSoldTickets">Sold Tickets</string>
    <string name="RaffleName">Raffle #1</string>
    <string name="SaleTotal">Total</string>
    <string name="SaleValue">Value$20</string>
    <string name="SalePrice">Enter Ticket Price...</string>
    <string name="SaleQuantity">Enter Quantity...</string>
    <string name="SaleName">Enter Customer Name...</string>
    <string name="SaleMobile">Enter Customer Mobile No...</string>
    <string name="BackBtn"><![CDATA[< Back]]></string>
    <string name="SellTickets">Sell Tickets</string>
    <string name="ViewTickets">View Tickets</string>
    <string name="EnterMargin">Enter a Winning Margin</string>
    <string name="SelectTicket">Draw a Winner</string>
    <string name="RaffleSettings">Raffle Settings</string>
    <string name="SoldTickets">"Tickets Sold: "</string>
    <string name="RemainingTickets">"Remaining Tickets: "</string>
    <string name="Zero">0</string>
    <string name="RemainingNumber">0</string>
    <string name="Title">RaffleApp</string>
    <string name="EnterRaffleName">Enter Raffle Name...</string>
    <string name="lblTicketsText">Tickets Per Person (0 for Unlimited)</string>
    <string name="lblMaximumText">Maximum Tickets (0 for Unlimited)</string>
    <string name="btnConfirmText">Confirm</string>
    <string name="Margin">Margin</string>
    <string name="PossibleTickets">"Possible Tickets: "</string>
    <string name="Minimum">Minimum</string>
    <string name="Maximum">Maximum</string>
    <string name="ReturnMain">Return to Mainmenu</string>
    <string name="Another">Add another raffle</string>
    <string name="Success">Success!!!</string>
    <string name="successMessage">You created a new raffle!!!</string>

    <string name="winnerTitle">Winner:</string>
    <string name="winnerText">The winner has been notified via text message</string>

    <string name="StrOngoing">Ongoing/Previous Raffles</string>
    <string name="StrNewRaffle">New Raffle</string>
    <string name="StrLastRaffle">Settings</string>
    <string name="strDesc">Description</string>
    <string name="strRaffleName">Name of Raffle</string>
    <string name="strPurchaseTickets">Purchase Tickets</string>
    <string name="strTicketNumber">Enter Ticket Number</string>
    <string name="strHintDesc">Enter Description...</string>
    <string name="strAnotherSale">Dont Send</string>
    <string name="strsuccessSale">Invoice for Tickets</string>
    <string name="strCustomerSale">Enter Customer Details:</string>
    <string name="rafflePerson">Enter Organiser\'s Name...</string>
    <string name="raffleLocation">Enter Location...</string>
    <string name="raffleStart">Enter Start Date...</string>
    <string name="raffleEnd">Enter End Date...</string>
    <string name="raffleRequired">Required Fields:</string>
    <string name="raffleOptional">Optional Fields:</string>
    <string name="btnSaleInvoice">Send Invoice</string>
    <string name="raffleMaximumTickets">Enter Max Tickets..</string>
    <string name="strSendInvoice">Send Invoice? and Return to Ticket Sales</string>
</resources>
