<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RaffleMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/RaffleMenuBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BackBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


        <Button
            android:id="@+id/button8"
            android:layout_width="220dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="openTicketList"
            android:text="@string/ViewTickets"
            app:layout_constraintEnd_toEndOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:layout_gravity="center"
            android:id="@+id/button9"
            android:layout_width="220dp"
            android:layout_height="75dp"
            android:text="@string/EnterMargin"
            app:layout_constraintEnd_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button
            android:layout_gravity="center"
            android:id="@+id/button10"
            android:layout_width="220dp"
            android:layout_height="75dp"
            android:text="@string/SelectTicket"
            android:onClick="drawWinner"
            app:layout_constraintEnd_toEndOf="@+id/button11"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <Button
            android:id="@+id/button11"
            android:layout_width="220dp"
            android:layout_height="75dp"
            android:text="@string/RaffleSettings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.544"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button10"
            app:layout_constraintVertical_bias="0.0"
            android:layout_gravity="center"
            />


        <Button
            android:id="@+id/button7"
            android:layout_width="220dp"
            android:layout_height="75dp"
            android:layout_marginBottom="20dp"
            android:text="@string/SellTickets"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
        <TextView
            android:layout_gravity="center"
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SoldTickets"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/TicketsSold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Zero"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RemainingTickets"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/RemainingNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RemainingNumber"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView15"
            app:layout_constraintStart_toEndOf="@+id/textView15" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>