<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRaffle">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BackBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputRaffleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputTickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733" />

    <EditText
        android:id="@+id/inputMaximum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTickets" />

    <TextView
        android:id="@+id/lblTickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTicketsText"
        app:layout_constraintBottom_toTopOf="@+id/inputTickets"
        app:layout_constraintStart_toStartOf="@+id/inputTickets" />

    <TextView
        android:id="@+id/lblMaximum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblMaximumText"
        app:layout_constraintBottom_toTopOf="@+id/inputMaximum"
        app:layout_constraintStart_toStartOf="@+id/inputMaximum" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="180dp"
        android:layout_height="81dp"
        android:text="@string/btnConfirmText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switchMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="192dp"
        android:text="@string/Margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputMarginMin"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="248dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/inputMarginMax"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputMarginMax"
        android:layout_width="85dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/inputMarginMin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblPossibleTickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PossibleTickets"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/possibleTickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/lblPossibleTickets"
        app:layout_constraintStart_toEndOf="@+id/lblPossibleTickets" />

    <TextView
        android:id="@+id/lblMarginMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Minimum"
        app:layout_constraintBottom_toTopOf="@+id/inputMarginMin"
        app:layout_constraintStart_toStartOf="@+id/inputMarginMin" />

    <TextView
        android:id="@+id/lblMarginMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Maximum"
        app:layout_constraintBottom_toTopOf="@+id/inputMarginMax"
        app:layout_constraintStart_toStartOf="@+id/inputMarginMax" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SaleName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/inputRaffleName"
        app:layout_constraintEnd_toStartOf="@+id/inputRaffleName" />

</androidx.constraintlayout.widget.ConstraintLayout>
