<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnNewRaffleActivity"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:text="@string/StrNewRaffle"
        app:layout_constraintBottom_toTopOf="@+id/btnOngoing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnOngoing"
        android:layout_width="300dp"
        android:layout_height="150dp"
<<<<<<< Updated upstream
        android:text="Ongoing/Previous Raffles"
=======
        android:text="@string/StrOngoing"
>>>>>>> Stashed changes
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLastRaffle"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:text="@string/StrLastRaffle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOngoing" />

    <TextView
<<<<<<< Updated upstream
        android:id="@+id/textView"
=======

        android:id="@+id/lblTitle"
>>>>>>> Stashed changes
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Title"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>