<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateRaffleConfirm">

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="183dp"
        android:layout_height="104dp"
        android:layout_marginBottom="52dp"
        android:text="@string/ReturnMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAnother"
        android:layout_width="186dp"
        android:layout_height="95dp"
        android:text="@string/Another"
        app:layout_constraintBottom_toTopOf="@+id/btnReturn"
        app:layout_constraintStart_toStartOf="@+id/btnReturn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Success"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblEnteredName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/successMessage"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/lblEnteredName"
        app:layout_constraintEnd_toEndOf="@+id/lblEnteredName"
        app:layout_constraintStart_toStartOf="@+id/lblEnteredName" />
</androidx.constraintlayout.widget.ConstraintLayout>